--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<a href="#" class="image fit"><img src="images/ni.jfif" alt="" /></a>
 									<p>Visualizations projects on power bi.</p>
 									<ul class="actions special">
-										<li><a href="https://powerbi.microsoft.com/en-au/" class="button">Check it out</a></li>
+										<li><a href="https://1drv.ms/f/s!AqH1X3LZ7oeXgsA2VbcKvvRG2eAbJw?e=ZZoP9U" class="button">Check it out</a></li>
 									</ul>
 								</article>
 							</section>
